force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_OLD_BIZPLACE_NEW__c.field-meta.xml
<CustomField>
    <fullName>PV_OLD_BIZPLACE_NEW__c</fullName>
    <label>PV_OLD_BIZPLACE_NEW</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7100</fullName>
                <label>그룹시너지</label>
            </value>
            <value>
                <fullName>6100</fullName>
                <label>RS</label>
            </value>
            <value>
                <fullName>6000</fullName>
                <label>FC</label>
            </value>
            <value>
                <fullName>4100</fullName>
                <label>유통(급식점)</label>
            </value>
            <value>
                <fullName>9001</fullName>
                <label>온라인사업</label>
            </value>
            <value>
                <fullName>7000</fullName>
                <label>전략(원료)</label>
            </value>
            <value>
                <fullName>4000</fullName>
                <label>유통(유통점)</label>
            </value>
            <value>
                <fullName>3100</fullName>
                <label>FO(축육)</label>
            </value>
            <value>
                <fullName>4300</fullName>
                <label>유통(전문점)</label>
            </value>
            <value>
                <fullName>8001</fullName>
                <label>급식직거래(병원)</label>
            </value>
            <value>
                <fullName>8002</fullName>
                <label>급식직거래(캐터링)</label>
            </value>
            <value>
                <fullName>8003</fullName>
                <label>급식직거래(실버)</label>
            </value>
            <value>
                <fullName>9002</fullName>
                <label>축육(세절원물)</label>
            </value>
            <value>
                <fullName>9000</fullName>
                <label>축육사업</label>
            </value>
            <value>
                <fullName>5000</fullName>
                <label>키즈(전문점)</label>
            </value>
            <value>
                <fullName>7104</fullName>
                <label>그룹시너지(송림푸드)</label>
            </value>
            <value>
                <fullName>8102</fullName>
                <label>단체급식(산업체)</label>
            </value>
            <value>
                <fullName>8104</fullName>
                <label>단체급식(장례식장)</label>
            </value>
            <value>
                <fullName>8106</fullName>
                <label>단체급식(학교)</label>
            </value>
            <value>
                <fullName>8108</fullName>
                <label>단체급식(푸드코트)</label>
            </value>
            <value>
                <fullName>8000</fullName>
                <label>급식직거래(직영)</label>
            </value>
            <value>
                <fullName>4200</fullName>
                <label>유통(대리점)</label>
            </value>
            <value>
                <fullName>7102</fullName>
                <label>그룹시너지(푸드빌)</label>
            </value>
            <value>
                <fullName>7105</fullName>
                <label>농산(원물공급)</label>
            </value>
            <value>
                <fullName>8105</fullName>
                <label>단체급식(골프장)</label>
            </value>
            <value>
                <fullName>8107</fullName>
                <label>단체급식(병원)</label>
            </value>
            <value>
                <fullName>8109</fullName>
                <label>단체급식(푸드코트外)</label>
            </value>
            <value>
                <fullName>3000</fullName>
                <label>FO(영업)</label>
            </value>
            <value>
                <fullName>5001</fullName>
                <label>키즈(직거래)</label>
            </value>
            <value>
                <fullName>7001</fullName>
                <label>전략(뉴채널)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>