force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_OLD_BIZPLACE_NEW_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_OLD_BIZPLACE_NEW_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>경로(사업부)
GroupId : ROUTETVBUR</description>
    <label>PV_OLD_BIZPLACE_NEW_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>ROUTETVBUR</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipLabel>MDMRegRequestCustomer (PV_OLD_BIZPLACE_NEW_lu)</relationshipLabel>
    <relationshipName>MDMRegRequestCustomer_PV_BIZPLACE</relationshipName>
    <type>Lookup</type>
</CustomField>