force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_OLDCD__c.field-meta.xml
<CustomField>
    <fullName>PV_OLDCD__c</fullName>
    <label>PV_OLDCD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>