force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_PAYCUST__c.field-meta.xml
<CustomField>
    <fullName>PV_PAYCUST__c</fullName>
    <label>PV_PAYCUST</label>
    <length>20</length>
    <type>Text</type>
</CustomField>