force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_PERNR__c.field-meta.xml
<CustomField>
    <fullName>PV_PERNR__c</fullName>
    <label>PV_PERNR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>