force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_PERNR_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_PERNR_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PV_PERNR_lu</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MDMRegRequestCustomer_PV_PERNR</relationshipName>
    <type>Lookup</type>
</CustomField>