force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_PRODLOADCOND__c.field-meta.xml
<CustomField>
    <fullName>PV_PRODLOADCOND__c</fullName>
    <label>PV_PRODLOADCOND</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>