force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_PROVCOL__c.field-meta.xml
<CustomField>
    <fullName>PV_PROVCOL__c</fullName>
    <label>PV_PROVCOL</label>
    <length>20</length>
    <type>Text</type>
</CustomField>