force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_REGIO_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_REGIO_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>지역
GroupId : T005S</description>
    <label>PV_REGIO_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>T005S</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipName>MDMRegRequestCustomer_PV_REGIO</relationshipName>
    <type>Lookup</type>
</CustomField>