force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_RETURNLOC__c.field-meta.xml
<CustomField>
    <fullName>PV_RETURNLOC__c</fullName>
    <label>PV_RETURNLOC</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>