force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_SALESCUST__c.field-meta.xml
<CustomField>
    <fullName>PV_SALESCUST__c</fullName>
    <label>PV_SALESCUST</label>
    <length>10</length>
    <type>Text</type>
</CustomField>