force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_SALESMNG__c.field-meta.xml
<CustomField>
    <fullName>PV_SALESMNG__c</fullName>
    <label>PV_SALESMNG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>