force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_SHAPE__c.field-meta.xml
<CustomField>
    <fullName>PV_SHAPE__c</fullName>
    <label>PV_SHAPE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>