force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_SHIPREQTIME__c.field-meta.xml
<CustomField>
    <fullName>PV_SHIPREQTIME__c</fullName>
    <label>PV_SHIPREQTIME</label>
    <length>15</length>
    <type>Text</type>
</CustomField>