force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_SPECIALNOTE__c.field-meta.xml
<CustomField>
    <fullName>PV_SPECIALNOTE__c</fullName>
    <label>PV_SPECIALNOTE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>