force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_STCD1__c.field-meta.xml
<CustomField>
    <fullName>PV_STCD1__c</fullName>
    <label>PV_STCD1</label>
    <length>6</length>
    <type>Text</type>
</CustomField>