force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_STCD2__c.field-meta.xml
<CustomField>
    <fullName>PV_STCD2__c</fullName>
    <label>PV_STCD2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>