force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_STCD3__c.field-meta.xml
<CustomField>
    <fullName>PV_STCD3__c</fullName>
    <label>PV_STCD3</label>
    <length>14</length>
    <type>Text</type>
</CustomField>