force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_STCDT__c.field-meta.xml
<CustomField>
    <fullName>PV_STCDT__c</fullName>
    <label>PV_STCDT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
                <label>건별/8단량별</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>건별/전체합</label>
            </value>
            <value>
                <fullName>A3</fullName>
                <label>인도처/건별/8단량별</label>
            </value>
            <value>
                <fullName>A4</fullName>
                <label>인도처/건별/전체합</label>
            </value>
            <value>
                <fullName>B1</fullName>
                <label>일합/8단량별</label>
            </value>
            <value>
                <fullName>B2</fullName>
                <label>일합/전체합</label>
            </value>
            <value>
                <fullName>B3</fullName>
                <label>인도처/일합/8단량별</label>
            </value>
            <value>
                <fullName>B4</fullName>
                <label>인도처/일합/전체합</label>
            </value>
            <value>
                <fullName>C1</fullName>
                <label>주합/8단량별</label>
            </value>
            <value>
                <fullName>C2</fullName>
                <label>주합/전체합</label>
            </value>
            <value>
                <fullName>C3</fullName>
                <label>인도처/주합/8단량별</label>
            </value>
            <value>
                <fullName>C4</fullName>
                <label>인도처/주합/전체합</label>
            </value>
            <value>
                <fullName>D1</fullName>
                <label>15일합/8단량별</label>
            </value>
            <value>
                <fullName>D2</fullName>
                <label>15일합/전체합</label>
            </value>
            <value>
                <fullName>D3</fullName>
                <label>인도처/15일합/8단량별</label>
            </value>
            <value>
                <fullName>D4</fullName>
                <label>인도처/15일합/전체합</label>
            </value>
            <value>
                <fullName>E1</fullName>
                <label>월합/8단량별</label>
            </value>
            <value>
                <fullName>E2</fullName>
                <label>월합/전체합</label>
            </value>
            <value>
                <fullName>E3</fullName>
                <label>인도처/월합/8단량별</label>
            </value>
            <value>
                <fullName>E4</fullName>
                <label>인도처/월합/전체합</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>