force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_STCDT_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_STCDT_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>세금계산서발행유형
GroupId : J_1ATODC</description>
    <label>PV_STCDT_lu</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>J_1ATODC</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipName>MDMRegRequestCustomer_PV_STCDT_del</relationshipName>
    <type>Lookup</type>
</CustomField>