force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_SUBSIDIARYYN__c.field-meta.xml
<CustomField>
    <fullName>PV_SUBSIDIARYYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV_SUBSIDIARYYN</label>
    <type>Checkbox</type>
</CustomField>