force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_TAXKDD__c.field-meta.xml
<CustomField>
    <fullName>PV_TAXKDD__c</fullName>
    <label>PV_TAXKDD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>면세-계산서교부</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>과세-세금계산서교부</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>의제매입액</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>영세-교부</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>면세-계산서미교부</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>과세-세금계산서미교</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>매출부가세 무관</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>