force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_TELF1__c.field-meta.xml
<CustomField>
    <fullName>PV_TELF1__c</fullName>
    <label>PV_TELF1</label>
    <type>Phone</type>
</CustomField>