force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_TELFX__c.field-meta.xml
<CustomField>
    <fullName>PV_TELFX__c</fullName>
    <label>PV_TELFX</label>
    <type>Phone</type>
</CustomField>