force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_UNLOADCOND1__c.field-meta.xml
<CustomField>
    <fullName>PV_UNLOADCOND1__c</fullName>
    <label>PV_UNLOADCOND1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>제한없음</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>엘리베이터사용</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>계단만사용</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>덤웨이터(식품전용 엘리베이터) 사용</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>