force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_UNLOADCOND2__c.field-meta.xml
<CustomField>
    <fullName>PV_UNLOADCOND2__c</fullName>
    <label>PV_UNLOADCOND2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>해당없음</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>지게차</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>L카</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>롤테이너</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>지게차 / L카</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>지게차 / 롤테이너</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>L카 / 롤테이너</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>지게차 / L카 / 롤테이너</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>