force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_VACCPRTEXCYN__c.field-meta.xml
<CustomField>
    <fullName>PV_VACCPRTEXCYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV_VACCPRTEXCYN</label>
    <type>Checkbox</type>
</CustomField>