force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_VBUND__c.field-meta.xml
<CustomField>
    <fullName>PV_VBUND__c</fullName>
    <label>PV_VBUND</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2920</fullName>
                <label>한솔냉장(설빙)</label>
            </value>
            <value>
                <fullName>A100</fullName>
                <label>CJ제일제당㈜</label>
            </value>
            <value>
                <fullName>A101</fullName>
                <label>CJ㈜</label>
            </value>
            <value>
                <fullName>A108</fullName>
                <label>씨제이브리딩주식회사</label>
            </value>
            <value>
                <fullName>A109</fullName>
                <label>씨제이헬스케어 주식회사</label>
            </value>
            <value>
                <fullName>A120</fullName>
                <label>CJ프레시웨이㈜</label>
            </value>
            <value>
                <fullName>A122</fullName>
                <label>프레시원</label>
            </value>
            <value>
                <fullName>A132</fullName>
                <label>㈜프레시원부산 (A132)</label>
            </value>
            <value>
                <fullName>A133</fullName>
                <label>㈜프레시원인천</label>
            </value>
            <value>
                <fullName>A134</fullName>
                <label>㈜프레시원광주</label>
            </value>
            <value>
                <fullName>A135</fullName>
                <label>㈜프레시원남서울</label>
            </value>
            <value>
                <fullName>A136</fullName>
                <label>프레시원 중부</label>
            </value>
            <value>
                <fullName>A137</fullName>
                <label>프레시원 강남</label>
            </value>
            <value>
                <fullName>A138</fullName>
                <label>프레시원 동서울</label>
            </value>
            <value>
                <fullName>A139</fullName>
                <label>㈜프레시원대구경북</label>
            </value>
            <value>
                <fullName>A140</fullName>
                <label>CJ푸드빌㈜</label>
            </value>
            <value>
                <fullName>A141</fullName>
                <label>프레시원전북_군산</label>
            </value>
            <value>
                <fullName>A156</fullName>
                <label>어업회사법인 신의도천일염주식회사</label>
            </value>
            <value>
                <fullName>A164</fullName>
                <label>금보디디에프</label>
            </value>
            <value>
                <fullName>A171</fullName>
                <label>(주)프레시원전북 (A171)</label>
            </value>
            <value>
                <fullName>A172</fullName>
                <label>(주)프레시원목포</label>
            </value>
            <value>
                <fullName>A173</fullName>
                <label>프레시원 청주</label>
            </value>
            <value>
                <fullName>A174</fullName>
                <label>(주)프레시원부산 (A174)</label>
            </value>
            <value>
                <fullName>A175</fullName>
                <label>(주)프레시원전북 (A175)</label>
            </value>
            <value>
                <fullName>A176</fullName>
                <label>에프앤디인프라 주식회사</label>
            </value>
            <value>
                <fullName>A177</fullName>
                <label>송림푸드㈜</label>
            </value>
            <value>
                <fullName>A178</fullName>
                <label>(주)송림에프에스</label>
            </value>
            <value>
                <fullName>A210</fullName>
                <label>CJ돈돈팜㈜</label>
            </value>
            <value>
                <fullName>A230</fullName>
                <label>CJ씨푸드㈜</label>
            </value>
            <value>
                <fullName>A243</fullName>
                <label>영우냉동식품㈜</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>