force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_VBUND_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_VBUND_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>관계사 코드
GroupId : T880</description>
    <label>PV_VBUND_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>T880</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipName>MDMRegRequestCustomer_PV_VBUND</relationshipName>
    <type>Lookup</type>
</CustomField>